--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,6 +70,7 @@ main{
         height: 650px;
         border-radius: 20px;
         overflow: hidden;
+        width: 100%;
     }
     h3{
         color: rgb(250, 250, 250);
