--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ header {
     height: 100%;
 
     .logo{
-        margin-top: 5%;
+        margin-top: 10%;
         margin-left: 8%;
     }
     .logo:hover{
@@ -264,4 +264,7 @@ legend{
         width: 200px;
         margin-top: 10%;
     }
+    div img{
+        width: 250px;
     }
+}
