--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ header {
     height: 100%;
 
     .logo{
-        margin-top: 10%;
+        margin-top: 12%;
         margin-left: 8%;
     }
     .logo:hover{
@@ -50,6 +50,7 @@ main{
         margin-bottom: 5%;
         justify-content:left;
         display: flex;
+        font-size: 4em;
        
     }
     section{
