--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@ header {
 
     .logo{
         margin-left: 8%;
+        margin-top: auto;
     }
     .logo:hover{
         transform:rotate(350deg);
