--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ header {
 
     .logo{
         margin-left: 8%;
-        margin-top: 10px;
+        margin-top: 30%;
     }
     .logo:hover{
         transform:rotate(350deg);
