--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,6 @@ header {
 
     .logo{
         margin-left: 8%;
-        margin-top: 30%;
     }
     .logo:hover{
         transform:rotate(350deg);
@@ -36,6 +35,7 @@ header {
         padding: 0;
         width: 100%;
         float: left;
+        margin-bottom: 10%;
       } 
 }
     body{
