--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,20 @@ header {
 body {
   background-color: black; }
 
-main h2 {
+h1{
+  font-size: 4em;
+}  
+
+h2 {
   background-color: red;
   color: white;
   text-align: right;
   padding: 1%;
   margin-bottom: 5%;
   margin-left: 40%;
-  justify-content: left;
+  justify-content:left;
   display: flex;
   font-size: 4em;
-  width: 100%;
 }
 
 main section {
@@ -222,4 +225,14 @@ legend {
 
 @media (max-width: 576px) {
   .logo {
-    width: 200px; } }
+    width: 200px;  
+  } 
+
+   h1{
+    font-size: 1rem;
+   }
+   h2
+   { 
+    font-size: 2em;
+   }
+  }
