--- a/scss/style.scss
+++ b/scss/style.scss
@@ -239,8 +239,6 @@ legend{
 }
 
 
-
-
 @media (max-width: 1200px){
     .logo{
         width: 320px;
@@ -250,6 +248,7 @@ legend{
 @media (max-width: 992px){
     .logo{
         width: 290px;
+    }
     }
 }
 @media (max-width: 768px){
