--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,9 @@
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 header {
     background-image: url(../assets/header.jpg);
     background-repeat: no-repeat;
@@ -9,6 +14,7 @@ header {
 
     .logo{
         margin-left: 8%;
+        margin-top: 20%;
     }
     .logo:hover{
         transform:rotate(350deg);
@@ -38,18 +44,6 @@ header {
         font-size: 4em;
       }
 
-    nav{
-        display: flex;
-        justify-content: end;
-        align-content: center;
-        font-size: 1.9em;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        float: left;
-        margin-bottom: 10%;
-      } 
-}
     body{
         background-color: black;
       
@@ -238,7 +232,6 @@ input{
 legend{
     font-size: 1.5em;
 }
-
 
 @media (max-width: 1200px){
     .logo{
