--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h2 {
   text-align: right;
   padding: 1%;
   margin-bottom: 5%;
-  margin-left: 40%;
+  margin-left: 30%;
   justify-content:left;
   display: flex;
   font-size: 4em;
@@ -208,23 +208,37 @@ legend {
 
 @media (max-width: 992px) {
   .logo {
-    width: 290px; } }
+    width: 290px; } 
+     h2 { 
+      font-size: 3em;
+     }
+  }
 
 @media (max-width: 768px) {
   .logo {
-    width: 250px; } }
+    width: 250px; }
+     h2
+     { 
+      font-size: 2.5em;
+     }
+  
+  }
 
 @media (max-width: 576px) {
   .logo {
     width: 200px;  
-  } 
-
-   h1{
-    font-size: 1rem;
    }
    h2
    { 
     font-size: 2em;
-   
    }
+   h1{
+    font-size: 1em;
+   }
+}
+@media (max-width: 356px) {
+  h2
+  { 
+   font-size: 0.5em;
   }
+}
