--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,10 +11,11 @@ header {
     background-size: cover;
     width: 100%;
     height: 100%;
+}
 
     .logo{
         margin-left: 8%;
-        margin-top: 20%;
+        margin-top: 100;
     }
     .logo:hover{
         transform:rotate(350deg);
@@ -62,8 +63,6 @@ header {
         margin: 0%;
         font-style: italic;
         color: white;
-        width: 350px;
-        height: 650px;
         border-radius: 20px;
         overflow: hidden;
         width: 100%;
@@ -258,5 +257,7 @@ legend{
         align-items: center;
         width: 200px;
    }
-}
+   h1{
+    font-size: 1em;
+   }
 }
