--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,13 @@ main div img {
 main h3 {
   color: #fafafa;
   font-size: 2.7em;
-  padding-top: 5%;
+  padding-top: 2%;
   text-align: center; }
 main button {
   background-color: white;
   font-size: 30px;
   padding: 15px 100px;
-  margin: 2%;
+  margin-bottom: 20%;
   cursor: pointer; }
 main .img-fin {
   background-image: url(../assets/encuentra.jpg);
@@ -203,19 +203,22 @@ legend {
 @media (max-width: 576px) {
   .logo {
     width: 200px;  
-   }
-   h2
-   { 
-    font-size: 2em;
-   }
-   header h1{
+   }  
+  header h1{
     font-size: 3rem;
   }
+   h2{ 
+    font-size: 2em;
    }
+   main h3 {
+    font-size: 2em;
+   }
+   main button {
+    font-size: 20px;
 
 @media (max-width: 356px) {
   h2
   { 
    font-size: 1.8em;
   }
-}
+}}
