--- a/css/style.css
+++ b/css/style.css
@@ -215,10 +215,11 @@ legend {
    }
    main button {
     font-size: 20px;
-
+   }
+  }
 @media (max-width: 356px) {
   h2
   { 
    font-size: 1.8em;
   }
-}}
+}
