--- a/css/style.css
+++ b/css/style.css
@@ -202,10 +202,12 @@ legend {
 
 @media (max-width: 576px) {
   .logo {
-    width: 200px;  
+    width: 150px;  
+    padding-top: 25px;
    }  
   header h1{
-    font-size: 3rem;
+    font-size: 2.5rem;
+    line-height: normal;
   }
    h2{ 
     font-size: 2em;
