--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ legend {
   .logo {
     width: 150px;  
     padding-top: 25px;
+    margin-left: 4%;
    }  
   header h1{
     font-size: 2.5rem;
