--- a/css/style.css
+++ b/css/style.css
@@ -274,4 +274,39 @@ legend {
    main button {
     font-size: 20px;
    }
-}
+
+   .galeria {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(1, 100%);
+    grid-template-rows: repeat(1, 20%);
+    grid-template-areas: 
+  "img1 img1"
+   "img2 img2"
+   "img3 img3"
+   "img4 img4"
+   "img5 img5";
+    gap: 3rem;
+    justify-content: center; }
+  .imagen-galeria {
+    width: 100%;
+    height: 100%; }
+  .imagen-galeria img {
+    width: 100%;
+    height: 100%; }
+  .img1 {
+    grid-area: img1; }
+  
+  .img2 {
+    grid-area: img2; }
+  
+  .img3 {
+    grid-area: img3; }
+  
+  .img4 {
+    grid-area: img4; }
+  
+  .img5 {
+    grid-area: img5; }
+  }
+
