--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,17 @@ header h1 {
     padding: 0%;
     line-height: 4.5rem;
     padding-bottom: 5%; } 
+header .nav{
+  float: right;
+      font-size: 1.2em;
+      display: flexbox;
+      justify-content: end;
+      align-content: center;
+      padding-right: 1;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      align-items: end;}
 body {
   background-color: black; }
 h1{
