--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,10 @@ header {
         transform:rotate(350deg);
     }
 
+    header .nav{
+        font-size: 2em;
+    }
+
     h1{
         text-align: right;
         font-family: Arial, Helvetica, sans-serif;
