--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,17 @@ header {
     width: 100%;
     height: 100%;
 }
+  header .nav{
+    display: flex;
+    justify-content: end;
+    align-content: center;
+    margin: 0;
+    padding: 0;
+    padding-right: 1%;
+    float: right;
+    width: 100%;
+    }   
+}
 
     .logo{
         margin-left: 8%;
