--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,9 +24,9 @@ header {
     }   
 }
 
-    .logo{
-        margin-left: 8%;
-        margin-top: 100;
+   header .logo{
+        margin-left: 2%;
+        margin-top: 10%;
     }
     .logo:hover{
         transform:rotate(350deg);
