--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ legend {
 @media (max-width: 576px) {
   .logo {
     width: 150px;  
-    padding-top: 40px;
+    padding-top: 10%;
    }  
   header h1{
     font-size: 2.5rem;
