--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,7 +130,7 @@ p{
 }
 
 .imagen-blog{
-    margin-top:0;
+    margin-top:5%;
     padding: 0;
     background-color: rgb(0, 0, 0);
 }
@@ -139,7 +139,7 @@ p{
     margin: 10%;
     margin-top: 2%;
     padding: 0%;   
-    width: 80%;
+    width: 70%;
 
 }
 
