--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ header {
     justify-content: end;
     align-content: center;
     margin: 0;
-    padding: 0;
+    padding: 1%;
     padding-right: 1%;
     float: right;
     width: 100%;
@@ -222,3 +222,144 @@ legend{
     font-size: 1.5em;
 }
 
+
+@media (max-width: 1200px) {
+    .logo {
+      width: 320px; } }
+  
+  @media (max-width: 992px) {
+    .logo {
+      width: 290px; } 
+    h2 { 
+        font-size: 3em; }
+      }
+  @media (max-width: 768px) {
+    .nav{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 2%;
+      margin: 0;
+      width: 100%;
+      font-size: 1.1em;
+    .logo {
+      width: 250px; }
+      header h1{
+        font-size: 4rem;
+      }
+       h2
+       { 
+        font-size: 2.5em;}
+      }
+  @media (max-width: 576px) {
+    }
+    .logo {
+      width: 150px;  
+      padding-top: 10%;
+     }  
+    header h1{
+      font-size: 2.5rem;
+      line-height: normal;
+    }
+     h2{ 
+      font-size: 2em;
+     }
+     main h3 {
+      font-size: 2em;
+     }
+     .h4{
+      font-size: 1em;
+  
+     }
+     main button {
+      font-size: 20px;
+     }
+     .galeria {
+      display: grid;
+      width: 90%;
+      grid-template-columns: repeat(1, 100%);
+      grid-template-rows: repeat(1, 20%);
+      grid-template-areas: 
+    "img1 img1"
+     "img2 img2"
+     "img3 img3"
+     "img4 img4"
+     "img5 img5";
+      gap: 3rem;
+      justify-content: center; }
+    .imagen-galeria {
+      width: 100%;
+      height: 100%; }
+    .imagen-galeria img {
+      width: 100%;
+      height: 100%; }
+    .img1 {
+      grid-area: img1; }
+    
+    .img2 {
+      grid-area: img2; }
+    
+    .img3 {
+      grid-area: img3; }
+    
+    .img4 {
+      grid-area: img4; }
+    
+    .img5 {
+      grid-area: img5; }
+    }
+  
+    .imagen-blog img {
+      margin: 10%;
+      margin-top: 2%;
+      padding: 0%;
+      width: 80%;
+      height: 50%; 
+    }
+      
+  
+  @media (max-width: 356px) {
+    h2
+    { 
+     font-size: 1.8em;
+    }
+    main h3 {
+      font-size: 2em;
+     }
+     main button {
+      font-size: 20px;
+     }
+     .galeria {
+      display: grid;
+      width: 90%;
+      grid-template-columns: repeat(1, 100%);
+      grid-template-rows: repeat(1, 20%);
+      grid-template-areas: 
+    "img1 img1"
+     "img2 img2"
+     "img3 img3"
+     "img4 img4"
+     "img5 img5";
+      gap: 3rem;
+      justify-content: center; }
+    .imagen-galeria {
+      width: 100%;
+      height: 100%; }
+    .imagen-galeria img {
+      width: 100%;
+      height: 100%; }
+    .img1 {
+      grid-area: img1; }
+    
+    .img2 {
+      grid-area: img2; }
+    
+    .img3 {
+      grid-area: img3; }
+    
+    .img4 {
+      grid-area: img4; }
+    
+    .img5 {
+      grid-area: img5; }
+    }
