--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,7 +27,8 @@ header {
    header .logo{
         margin-left: 2%;
         margin-top: 10%;
-    }
+        width: 300px;
+   }
     .logo:hover{
         transform:rotate(350deg);
     }
@@ -224,12 +225,12 @@ legend{
 
 
 @media (max-width: 1200px) {
-    .logo {
-      width: 320px; } }
+  header .logo{
+      width: 250px; } }
   
   @media (max-width: 992px) {
-    .logo {
-      width: 290px; } 
+    header .logo{
+      width: 200px; } 
     h2 { 
         font-size: 3em; }
       }
@@ -242,8 +243,8 @@ legend{
       margin: 0;
       width: 100%;
       font-size: 1.1em;
-    .logo {
-      width: 250px; }
+      header .logo{
+      width: 150px; }
       header h1{
         font-size: 4rem;
       }
@@ -253,10 +254,6 @@ legend{
       }
   @media (max-width: 576px) {
     }
-    .logo {
-      width: 150px;  
-      padding-top: 10%;
-     }  
     header h1{
       font-size: 2.5rem;
       line-height: normal;
