--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,43 @@
-header {
-  background-image: url(../assets/header.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  width: 100%;
-  height: 100%; }
-  header .logo {
-    margin-top: 10%;
-    margin-left: 2%; }
-header .logo:hover {
-    transform: rotate(350deg); }
-header h1 {
-    text-align: right;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font-size: 4rem;
-    margin: auto;
-    margin-right: 5%;
-    padding: 0%;
-    line-height: 4.5rem;
-    padding-bottom: 5%; } 
-body {
-  background-color: black; }
-    .nav{
-      display: flex;
-      align-content:center;
-      justify-content: right;
-      float: right;
-      font-size: 1.3em;
-      padding:0;
-      margin: 0;
-  }
-h1{
-  font-size: 4em;} 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+  * header {
+    background-image: url(../assets/header.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%; }
+  * header .nav {
+    display: flex;
+    justify-content: end;
+    align-content: center;
+    margin: 0;
+    padding: 1%;
+    padding-right: 1%;
+    float: right;
+    width: 100%; }
+
+header .logo {
+  margin-left: 2%;
+  margin-top: 10%;
+  width: 300px; }
+
+.logo:hover {
+  transform: rotate(350deg); }
+
+h1 {
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 4rem;
+  margin: auto;
+  margin-right: 5%;
+  padding: 0%;
+  line-height: 4.5rem;
+  padding-bottom: 5%; }
+
 h2 {
   background-color: red;
   color: white;
@@ -40,10 +45,14 @@ h2 {
   padding: 1%;
   margin-bottom: 5%;
   margin-left: 30%;
-  justify-content:left;
+  justify-content: left;
   display: flex;
-  font-size: 4em;}
-main section {
+  font-size: 4em; }
+
+body {
+  background-color: black; }
+
+section {
   text-align: center;
   color: white;
   display: flex;
@@ -51,26 +60,30 @@ main section {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap; }
-main div img {
+
+div img {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0%;
   font-style: italic;
   color: white;
-  width: 300px;
-  height: 450px;
   border-radius: 20px;
-  overflow: hidden; }
-main h3 {
+  overflow: hidden;
+  width: 100%; }
+
+h3 {
   color: #fafafa;
   font-size: 2.7em;
+  padding-top: 3%;
   text-align: center; }
-main button {
+
+button {
   background-color: white;
   font-size: 30px;
   padding: 15px 100px;
-  margin-bottom: 20%;
+  margin: 2%;
   cursor: pointer; }
-main .img-fin {
+
+.img-fin {
   background-image: url(../assets/encuentra.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -79,9 +92,11 @@ main .img-fin {
   height: 450px;
   padding: 0;
   margin-top: 10%; }
-main h4 {
+
+h4 {
   font-size: 4rem;
   font-family: Arial, Helvetica, sans-serif; }
+
 .footer {
   background-color: black;
   padding-top: 10%;
@@ -89,23 +104,29 @@ main h4 {
   color: white;
   display: flex;
   justify-content: center; }
+
 h5 {
   font-size: 1em;
   line-height: 3rem; }
+
 h6 {
   font-size: 2em; }
+
 p {
   color: white;
   text-align: center; }
+
 .imagen-blog {
   margin-top: 5%;
   padding: 0;
   background-color: black; }
+
 .imagen-blog img {
-  margin: 20%;
+  margin: 10%;
   margin-top: 2%;
   padding: 0%;
-  width: 60%; }
+  width: 70%; }
+
 .galeria {
   display: grid;
   width: 90%;
@@ -113,17 +134,18 @@ p {
   padding-top: 5%;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: repeat(3, 250px);
-  grid-template-areas: "img1 img1 img2 img2"
- "img1 img1 img3 img4"
- "img1 img1 img5 img5";
+  grid-template-areas: "img1 img1 img2 img2" "img1 img1 img3 img4" "img1 img1 img5 img5";
   gap: 3rem;
   justify-content: center; }
+
 .imagen-galeria {
   width: 100%;
   height: 100%; }
+
 .imagen-galeria img {
   width: 100%;
   height: 100%; }
+
 .img1 {
   grid-area: img1; }
 
@@ -147,6 +169,7 @@ p {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap; }
+
 .iconos {
   width: 400px;
   margin: 0;
@@ -163,88 +186,72 @@ form {
   font-size: 20px;
   color: black;
   background-color: white; }
+
 fieldset {
   width: 70%;
   margin-left: 15%; }
+
 input, textarea {
   width: 100;
   margin-bottom: 20px;
   padding: 7px;
   border-width: 2px;
   box-sizing: border-box; }
+
 textarea {
   height: 100px;
-  width: 95%;
+  width: 50%;
   background-color: white; }
+
 input {
-  width: 95%;
+  width: 50%;
   background-color: white; }
+
 legend {
   font-size: 1.5em; }
 
-
 @media (max-width: 1200px) {
-  .logo {
-    width: 320px; } }
+  header .logo {
+    width: 250px; } }
 
 @media (max-width: 992px) {
-  .logo {
-    width: 290px; } 
-  h2 { 
-      font-size: 3em; }
-    }
+  header .logo {
+    width: 200px; }
+  h2 {
+    font-size: 3em; } }
+
 @media (max-width: 768px) {
-  .nav{
+  .nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 2%;
     margin: 0;
     width: 100%;
-    font-size: 1.1em;
-  .logo {
-    width: 250px; }
-    header h1{
-      font-size: 4rem;
-    }
-     h2
-     { 
-      font-size: 2.5em;}
-    }
-@media (max-width: 576px) {
-  }
-  .logo {
-    width: 150px;  
-    padding-top: 10%;
-   }  
-  header h1{
+    font-size: 1.1em; }
+    .nav header .logo {
+      width: 150px; }
+    .nav header h1 {
+      font-size: 4rem; }
+    .nav h2 {
+      font-size: 2.5em; }
+  header h1 {
     font-size: 2.5rem;
-    line-height: normal;
-  }
-   h2{ 
-    font-size: 2em;
-   }
-   main h3 {
-    font-size: 2em;
-   }
-   .h4{
-    font-size: 1em;
-
-   }
-   main button {
-    font-size: 20px;
-   }
-   .galeria {
+    line-height: normal; }
+  h2 {
+    font-size: 2em; }
+  main h3 {
+    font-size: 2em; }
+  .h4 {
+    font-size: 1em; }
+  main button {
+    font-size: 20px; }
+  .galeria {
     display: grid;
     width: 90%;
     grid-template-columns: repeat(1, 100%);
     grid-template-rows: repeat(1, 20%);
-    grid-template-areas: 
-  "img1 img1"
-   "img2 img2"
-   "img3 img3"
-   "img4 img4"
-   "img5 img5";
+    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
     gap: 3rem;
     justify-content: center; }
   .imagen-galeria {
@@ -255,51 +262,35 @@ legend {
     height: 100%; }
   .img1 {
     grid-area: img1; }
-  
   .img2 {
     grid-area: img2; }
-  
   .img3 {
     grid-area: img3; }
-  
   .img4 {
     grid-area: img4; }
-  
   .img5 {
-    grid-area: img5; }
-  }
+    grid-area: img5; } }
 
-  .imagen-blog img {
-    margin: 10%;
-    margin-top: 2%;
-    padding: 0%;
-    width: 80%;
-    height: 50%; 
-  }
-    
+.imagen-blog img {
+  margin: 10%;
+  margin-top: 2%;
+  padding: 0%;
+  width: 80%;
+  height: 50%; }
 
 @media (max-width: 356px) {
-  h2
-  { 
-   font-size: 1.8em;
-  }
+  h2 {
+    font-size: 1.8em; }
   main h3 {
-    font-size: 2em;
-   }
-   main button {
-    font-size: 20px;
-   }
-   .galeria {
+    font-size: 2em; }
+  main button {
+    font-size: 20px; }
+  .galeria {
     display: grid;
     width: 90%;
     grid-template-columns: repeat(1, 100%);
     grid-template-rows: repeat(1, 20%);
-    grid-template-areas: 
-  "img1 img1"
-   "img2 img2"
-   "img3 img3"
-   "img4 img4"
-   "img5 img5";
+    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
     gap: 3rem;
     justify-content: center; }
   .imagen-galeria {
@@ -310,16 +301,11 @@ legend {
     height: 100%; }
   .img1 {
     grid-area: img1; }
-  
   .img2 {
     grid-area: img2; }
-  
   .img3 {
     grid-area: img3; }
-  
   .img4 {
     grid-area: img4; }
-  
   .img5 {
-    grid-area: img5; }
-  }
+    grid-area: img5; } }
