--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,13 +71,15 @@ header {
         flex-wrap: wrap;
     }
     div img{
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0%;
-        font-style: italic;
-        color: white;
-        border-radius: 20px;
-        overflow: hidden;
-        width: 100%;
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0%;
+      font-style: italic;
+      color: white;
+      width: 350px;
+      height: 450px;
+      border-radius: 20px;
+      overflow: hidden;
+  
     }
     h3{
         color: rgb(250, 250, 250);
@@ -212,11 +214,11 @@ input, textarea{
 }
 textarea{
     height: 100px;
-    width: 50%;
+    width: 90%;
     background-color: rgb(255, 255, 255);
 }
 input{
-    width: 50%;
+    width: 90%;
     background-color: rgb(255, 255, 255);
 }
 legend{
@@ -226,11 +228,11 @@ legend{
 
 @media (max-width: 1200px) {
   header .logo{
-      width: 250px; } }
+      width: 280px; } }
   
   @media (max-width: 992px) {
     header .logo{
-      width: 200px; } 
+      width: 250px; } 
     h2 { 
         font-size: 3em; }
       }
@@ -244,7 +246,7 @@ legend{
       width: 100%;
       font-size: 1.1em;
       header .logo{
-      width: 150px; }
+      width: 200px; }
       header h1{
         font-size: 4rem;
       }
@@ -271,6 +273,10 @@ legend{
      main button {
       font-size: 20px;
      }
+     div img{
+      width: 350px;
+      margin-top: 10%;
+    }
      .galeria {
       display: grid;
       width: 90%;
@@ -326,6 +332,10 @@ legend{
      main button {
       font-size: 20px;
      }
+     div img{
+        width: 300px;
+        margin-top: 10%;
+      }
      .galeria {
       display: grid;
       width: 90%;
