--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ section {
 
 div img {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0%;
+  margin-top: 15%;
   font-style: italic;
   color: white;
   width: 350px;
@@ -135,7 +135,9 @@ p {
   padding-top: 5%;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: repeat(3, 250px);
-  grid-template-areas: "img1 img1 img2 img2" "img1 img1 img3 img4" "img1 img1 img5 img5";
+  grid-template-areas: "img1 img1 img2 img2"
+ "img1 img1 img3 img4"
+ "img1 img1 img5 img5";
   gap: 3rem;
   justify-content: center; }
 
@@ -232,57 +234,62 @@ legend {
     font-size: 1.1em; }
     .nav header .logo {
       width: 200px; }
+    .nav div img {
+      margin-top: 15%; }
+      .nav div img header h1 {
+        font-size: 4rem; }
+      .nav div img h2 {
+        font-size: 2.5em; }
     .nav header h1 {
-      font-size: 4rem; }
+      font-size: 2.5rem;
+      line-height: normal; }
     .nav h2 {
-      font-size: 2.5em; }
-  header h1 {
-    font-size: 2.5rem;
-    line-height: normal; }
-  h2 {
-    font-size: 2em; }
-  main h3 {
-    font-size: 2em; }
-  .h4 {
-    font-size: 1em; }
-  main button {
-    font-size: 20px; }
-  div img {
-    width: 350px;
-    margin-top: 10%; }
-  .galeria {
-    display: grid;
-    width: 90%;
-    grid-template-columns: repeat(1, 100%);
-    grid-template-rows: repeat(1, 20%);
-    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
-    gap: 3rem;
-    justify-content: center; }
-  .imagen-galeria {
-    width: 100%;
-    height: 100%; }
-  .imagen-galeria img {
-    width: 100%;
-    height: 100%; }
-  .img1 {
-    grid-area: img1; }
-  .img2 {
-    grid-area: img2; }
-  .img3 {
-    grid-area: img3; }
-  .img4 {
-    grid-area: img4; }
-  .img5 {
-    grid-area: img5; } }
+      font-size: 2em; }
+    .nav main h3 {
+      font-size: 2em; }
+    .nav .h4 {
+      font-size: 1em; }
+    .nav main button {
+      font-size: 20px; }
+    .nav div img {
+      width: 350px;
+      margin-top: 15%; }
+    .nav .galeria {
+      display: grid;
+      width: 90%;
+      grid-template-columns: repeat(1, 100%);
+      grid-template-rows: repeat(1, 20%);
+      grid-template-areas: "img1 img1"
+ "img2 img2"
+ "img3 img3"
+ "img4 img4"
+ "img5 img5";
+      gap: 3rem;
+      justify-content: center; }
+    .nav .imagen-galeria {
+      width: 100%;
+      height: 100%; }
+    .nav .imagen-galeria img {
+      width: 100%;
+      height: 100%; }
+    .nav .img1 {
+      grid-area: img1; }
+    .nav .img2 {
+      grid-area: img2; }
+    .nav .img3 {
+      grid-area: img3; }
+    .nav .img4 {
+      grid-area: img4; }
+    .nav .img5 {
+      grid-area: img5; }
+  .imagen-blog img {
+    margin: 10%;
+    margin-top: 2%;
+    padding: 0%;
+    width: 80%;
+    height: 50%; } }
 
-.imagen-blog img {
-  margin: 10%;
-  margin-top: 2%;
-  padding: 0%;
-  width: 80%;
-  height: 50%; }
-
-@media (max-width: 356px) {
+@media (max-width: 768px) and (max-width: 356px) {
   h2 {
     font-size: 1.8em; }
   main h3 {
@@ -297,7 +304,11 @@ legend {
     width: 90%;
     grid-template-columns: repeat(1, 100%);
     grid-template-rows: repeat(1, 20%);
-    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
+    grid-template-areas: "img1 img1"
+ "img2 img2"
+ "img3 img3"
+ "img4 img4"
+ "img5 img5";
     gap: 3rem;
     justify-content: center; }
   .imagen-galeria {
