--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ section {
 
 div img {
   font-family: Arial, Helvetica, sans-serif;
-  margin-top: 15%;
+  margin: 0%;
   font-style: italic;
   color: white;
   width: 350px;
@@ -135,9 +135,7 @@ p {
   padding-top: 5%;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: repeat(3, 250px);
-  grid-template-areas: "img1 img1 img2 img2"
- "img1 img1 img3 img4"
- "img1 img1 img5 img5";
+  grid-template-areas: "img1 img1 img2 img2" "img1 img1 img3 img4" "img1 img1 img5 img5";
   gap: 3rem;
   justify-content: center; }
 
@@ -239,49 +237,49 @@ legend {
       .nav div img header h1 {
         font-size: 4rem; }
       .nav div img h2 {
-        font-size: 2.5em; }
-    .nav header h1 {
-      font-size: 2.5rem;
-      line-height: normal; }
-    .nav h2 {
-      font-size: 2em; }
-    .nav main h3 {
-      font-size: 2em; }
-    .nav .h4 {
-      font-size: 1em; }
-    .nav main button {
-      font-size: 20px; }
-    .nav div img {
-      width: 350px;
-      margin-top: 15%; }
-    .nav .galeria {
-      display: grid;
-      width: 90%;
-      grid-template-columns: repeat(1, 100%);
-      grid-template-rows: repeat(1, 20%);
-      grid-template-areas: "img1 img1"
- "img2 img2"
- "img3 img3"
- "img4 img4"
- "img5 img5";
-      gap: 3rem;
-      justify-content: center; }
-    .nav .imagen-galeria {
-      width: 100%;
-      height: 100%; }
-    .nav .imagen-galeria img {
-      width: 100%;
-      height: 100%; }
-    .nav .img1 {
-      grid-area: img1; }
-    .nav .img2 {
-      grid-area: img2; }
-    .nav .img3 {
-      grid-area: img3; }
-    .nav .img4 {
-      grid-area: img4; }
-    .nav .img5 {
-      grid-area: img5; }
+        font-size: 2.5em; } }
+
+@media (max-width: 768px) and (max-width: 576px) {
+  h1 {
+    font-size: 2em;
+    line-height: normal; }
+  h2 {
+    font-size: 2em; }
+  main h3 {
+    font-size: 2em; }
+  .h4 {
+    font-size: 1em; }
+  main button {
+    font-size: 20px; }
+  div img {
+    width: 350px;
+    margin-top: 15%; }
+  .galeria {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(1, 100%);
+    grid-template-rows: repeat(1, 20%);
+    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
+    gap: 3rem;
+    justify-content: center; }
+  .imagen-galeria {
+    width: 100%;
+    height: 100%; }
+  .imagen-galeria img {
+    width: 100%;
+    height: 100%; }
+  .img1 {
+    grid-area: img1; }
+  .img2 {
+    grid-area: img2; }
+  .img3 {
+    grid-area: img3; }
+  .img4 {
+    grid-area: img4; }
+  .img5 {
+    grid-area: img5; } }
+
+@media (max-width: 768px) {
   .imagen-blog img {
     margin: 10%;
     margin-top: 2%;
@@ -290,6 +288,8 @@ legend {
     height: 50%; } }
 
 @media (max-width: 768px) and (max-width: 356px) {
+  h1 {
+    font-size: 1.5em; }
   h2 {
     font-size: 1.8em; }
   main h3 {
@@ -304,11 +304,7 @@ legend {
     width: 90%;
     grid-template-columns: repeat(1, 100%);
     grid-template-rows: repeat(1, 20%);
-    grid-template-areas: "img1 img1"
- "img2 img2"
- "img3 img3"
- "img4 img4"
- "img5 img5";
+    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
     gap: 3rem;
     justify-content: center; }
   .imagen-galeria {
