--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,14 +129,14 @@ p{
 }
 .imagen-blog{
     margin-top:5%;
-    padding: 0;
+   
     background-color: rgb(0, 0, 0);
 }
 .imagen-blog img{ 
-    margin: 10%;
+    margin-left: 20%;
     margin-top: 2%;
-    padding: 0%;   
-    width: 70%;
+    width: 60%;
+    height: 50%;
 }
 .galeria{
     display: grid;
