--- a/css/style.css
+++ b/css/style.css
@@ -119,12 +119,14 @@ p {
 
 .imagen-blog {
   margin-top: 5%;
+  padding: 0;
   background-color: black; }
 
 .imagen-blog img {
-  margin-left: 20%;
+  margin: 10%;
   margin-top: 2%;
-  width: 60%;
+  padding: 0%;
+  width: 80%;
   height: 50%; }
 
 .galeria {
