--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,13 +129,14 @@ p{
 }
 .imagen-blog{
     margin-top:5%;
-   
+    padding: 0;
     background-color: rgb(0, 0, 0);
 }
 .imagen-blog img{ 
-    margin-left: 20%;
+    margin: 10%;
     margin-top: 2%;
-    width: 60%;
+    padding: 0%;   
+    width: 80%;
     height: 50%;
 }
 .galeria{
