--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@
 header .logo {
   margin-left: 2%;
   margin-top: 10%;
-  width: 300px; }
+  width: 300px;
+  height: 500px; }
 
 .logo:hover {
   transform: rotate(350deg); }
@@ -214,11 +215,13 @@ legend {
 
 @media (max-width: 1200px) {
   header .logo {
-    width: 280px; } }
+    width: 280px;
+    height: 480px; } }
 
 @media (max-width: 992px) {
   header .logo {
-    width: 250px; }
+    width: 250px;
+    height: 450; }
   h2 {
     font-size: 3em; } }
 
@@ -231,16 +234,17 @@ legend {
     margin: 0;
     width: 100%;
     font-size: 1.1em; }
-    .nav header .logo {
-      width: 200px; }
-    .nav div img {
-      margin-top: 15%; }
-      .nav div img header h1 {
-        font-size: 4rem; }
-      .nav div img h2 {
-        font-size: 2.5em; } }
+  header .logo {
+    width: 200px;
+    height: 350px; }
+  div img {
+    margin-top: 15%; }
+    div img header h1 {
+      font-size: 4rem; }
+    div img h2 {
+      font-size: 2.5em; } }
 
-@media (max-width: 768px) and (max-width: 576px) {
+@media (max-width: 576px) {
   h1 {
     font-size: 2em;
     line-height: normal; }
@@ -280,15 +284,14 @@ legend {
   .img5 {
     grid-area: img5; } }
 
-@media (max-width: 768px) {
-  .imagen-blog img {
-    margin: 10%;
-    margin-top: 2%;
-    padding: 0%;
-    width: 80%;
-    height: 50%; } }
+.imagen-blog img {
+  margin: 10%;
+  margin-top: 2%;
+  padding: 0%;
+  width: 80%;
+  height: 50%; }
 
-@media (max-width: 768px) and (max-width: 356px) {
+@media (max-width: 356px) {
   h1 {
     font-size: 1.5em; }
   h2 {
