--- a/scss/style.scss
+++ b/scss/style.scss
@@ -265,6 +265,10 @@ legend{
         font-size: 2.5em;}
       }}
   @media (max-width: 576px) {
+    header .logo{
+      margin-top: 15%;
+      width: 180px;
+      height: 320px;
    h1{
       font-size: 2em;
       line-height: normal;
@@ -329,11 +333,15 @@ legend{
       width: 80%;
       height: 50%; 
     }
-      
+  }
   
   @media (max-width: 356px) {
+    header .logo{
+      margin-top: 15%;
+      width: 170px;
+      height: 300px;}
     h1{
-      font-size: 1.5em;
+      font-size: 1.9em;
     }
     h2
     { 
