--- a/scss/style.scss
+++ b/scss/style.scss
@@ -270,11 +270,11 @@ legend{
       width: 180px;
       height: 320px;
    h1{
-      font-size: 2em;
+      font-size: 1.9em;
       line-height: normal;
     }
      h2{ 
-      font-size: 2em;
+      font-size: 1.9em;
      }
      main h3 {
       font-size: 2em;
@@ -334,18 +334,25 @@ legend{
       height: 50%; 
     }
   }
-  
+  @media (max-width: 456px) {
+    h1{
+      font-size: 1.8em;
+    }
+    h2{
+      font-size: 1.8em;
+    }
+  }
+
   @media (max-width: 356px) {
     header .logo{
       margin-top: 15%;
-      width: 170px;
-      height: 300px;}
+    }
     h1{
-      font-size: 1.9em;
+      font-size: 1.5em;
     }
     h2
     { 
-     font-size: 1.8em;
+     font-size: 1.5em;
     }
     main h3 {
       font-size: 2em;
