--- a/scss/style.scss
+++ b/scss/style.scss
@@ -233,11 +233,16 @@ legend{
       width: 280px; 
       height: 480px;
     }
+    div img{
+      margin-top: 10%;
+  } 
 }
   @media (max-width: 992px) {
     header .logo{
       width: 250px;
-      height: 450;
+      height: 450;}
+      div img{
+        margin-top: 10%;
     } 
     h2 { 
         font-size: 3em; }
