--- a/css/style.css
+++ b/css/style.css
@@ -243,54 +243,54 @@ legend {
     height: 350px; }
   div img {
     margin-top: 15%; }
-    div img header h1 {
-      font-size: 4rem; }
+    div img h1 {
+      font-size: 3rem; }
     div img h2 {
       font-size: 2.5em; } }
 
-@media (max-width: 576px) {
+@media (max-width: 560px) {
   header .logo {
     margin-top: 15%;
     width: 180px;
     height: 320px; }
-    header .logo h1 {
-      font-size: 1.9em;
-      line-height: normal; }
-    header .logo h2 {
-      font-size: 1.9em; }
-    header .logo main h3 {
-      font-size: 2em; }
-    header .logo .h4 {
-      font-size: 1em; }
-    header .logo main button {
-      font-size: 20px; }
-    header .logo div img {
-      width: 350px;
-      margin-top: 15%; }
-    header .logo .galeria {
-      display: grid;
-      width: 90%;
-      grid-template-columns: repeat(1, 100%);
-      grid-template-rows: repeat(1, 20%);
-      grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
-      gap: 3rem;
-      justify-content: center; }
-    header .logo .imagen-galeria {
-      width: 100%;
-      height: 100%; }
-    header .logo .imagen-galeria img {
-      width: 100%;
-      height: 100%; }
-    header .logo .img1 {
-      grid-area: img1; }
-    header .logo .img2 {
-      grid-area: img2; }
-    header .logo .img3 {
-      grid-area: img3; }
-    header .logo .img4 {
-      grid-area: img4; }
-    header .logo .img5 {
-      grid-area: img5; }
+  h1 {
+    font-size: 1.5em;
+    line-height: normal; }
+  h2 {
+    font-size: 1em; }
+  main h3 {
+    font-size: 2em; }
+  .h4 {
+    font-size: 1em; }
+  main button {
+    font-size: 20px; }
+  div img {
+    width: 350px;
+    margin-top: 15%; }
+  .galeria {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(1, 100%);
+    grid-template-rows: repeat(1, 20%);
+    grid-template-areas: "img1 img1" "img2 img2" "img3 img3" "img4 img4" "img5 img5";
+    gap: 3rem;
+    justify-content: center; }
+  .imagen-galeria {
+    width: 100%;
+    height: 100%; }
+  .imagen-galeria img {
+    width: 100%;
+    height: 100%; }
+  .img1 {
+    grid-area: img1; }
+  .img2 {
+    grid-area: img2; }
+  .img3 {
+    grid-area: img3; }
+  .img4 {
+    grid-area: img4; }
+  .img5 {
+    grid-area: img5; }
   .imagen-blog img {
     margin: 10%;
     margin-top: 2%;
@@ -298,19 +298,13 @@ legend {
     width: 80%;
     height: 50%; } }
 
-@media (max-width: 456px) {
-  h1 {
-    font-size: 1.8em; }
-  h2 {
-    font-size: 1.8em; } }
-
-@media (max-width: 356px) {
+@media (max-width: 400px) {
   header .logo {
     margin-top: 15%; }
   h1 {
-    font-size: 1.5em; }
+    font-size: 1.3em; }
   h2 {
-    font-size: 1.5em; }
+    font-size: 1.3em; }
   main h3 {
     font-size: 2em; }
   main button {
