--- a/scss/style.scss
+++ b/scss/style.scss
@@ -262,24 +262,24 @@ legend{
     }
       div img{
         margin-top: 15%;
-      header h1{
-        font-size: 4rem;
+       h1{
+        font-size: 3rem;
       }
        h2
        { 
         font-size: 2.5em;}
       }}
-  @media (max-width: 576px) {
+  @media (max-width: 560px) {
     header .logo{
       margin-top: 15%;
       width: 180px;
-      height: 320px;
+      height: 320px;}
    h1{
-      font-size: 1.9em;
+      font-size: 1.5em;
       line-height: normal;
     }
      h2{ 
-      font-size: 1.9em;
+      font-size: 1em;
      }
      main h3 {
       font-size: 2em;
@@ -329,7 +329,6 @@ legend{
     
     .img5 {
       grid-area: img5; }
-    }
   
     .imagen-blog img {
       margin: 10%;
@@ -339,25 +338,17 @@ legend{
       height: 50%; 
     }
   }
-  @media (max-width: 456px) {
-    h1{
-      font-size: 1.8em;
-    }
-    h2{
-      font-size: 1.8em;
-    }
-  }
 
-  @media (max-width: 356px) {
+  @media (max-width: 400px) {
     header .logo{
       margin-top: 15%;
     }
     h1{
-      font-size: 1.5em;
+      font-size: 1.3em;
     }
     h2
     { 
-     font-size: 1.5em;
+     font-size: 1.3em;
     }
     main h3 {
       font-size: 2em;
