--- a/scss/style.scss
+++ b/scss/style.scss
@@ -338,6 +338,9 @@ legend{
       height: 50%; 
     }
   }
+  .footer{
+    margin-top: 10%;
+  }
 
   @media (max-width: 350px) {
     header .logo{
