--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,9 @@ legend {
     width: 80%;
     height: 50%; } }
 
+.footer {
+  margin-top: 10%; }
+
 @media (max-width: 350px) {
   header .logo {
     margin-top: 15%; }
